--- a/src/layout/Bars/sidebar.css
+++ b/src/layout/Bars/sidebar.css
@@ -96,7 +96,6 @@
   line-height: 60px;
 }
 
-
 @media (max-width: 768px) {
   .sidebar.open li.profile {
     width: 30% !important;
@@ -140,7 +139,7 @@
   left: 0;
   z-index: 9999 !important;
   color: #fff;
-  background: #051e34;
+  background: #1c3b17;
   padding: 0px 20px;
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
@@ -149,20 +148,19 @@
   opacity: 0;
   white-space: nowrap;
   pointer-events: none;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
   max-height: 300px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .dark .sidebar li .tooltip {
-  background: #171D32;
+  background: #171d32;
 }
 
 .dark .sidebar.open li .tooltip {
   background: none;
 }
-
 
 .sidebar.open li .tooltip {
   padding-left: 10px;
@@ -177,8 +175,6 @@
   background: gray;
   border-radius: 30px;
 }
-
-
 
 .sidebar li:hover .tooltip {
   opacity: 1;
@@ -208,28 +204,20 @@
   transform: none;
 }
 
-
 .link:hover {
-  background: #051e34 !important;
+  background: #1c3b17 !important;
   transform: translateX(10px);
-  color: #fff !important;
+  /* color: #fff !important; */
 }
 
 .dark .link:hover {
-  background: #171D32 !important;
+  background: #171d32 !important;
 }
 
 .sidebar.open .link:hover {
   background: none !important;
   transform: translateX(10px);
-  color: #fff !important;
-}
-
-
-
-.sidebar.open .link:hover {
-  transform: translateX(10px);
-  color: #fff !important;
+  /* color: #fff !important; */
 }
 
 a {
@@ -299,7 +287,7 @@ a {
 
 .links_dropdown_arrow {
   transform: rotate(-90deg);
-  transition: all .3s ease !important;
+  transition: all 0.3s ease !important;
 }
 
 .multiple-item.open_dropdown .links_dropdown_arrow {
@@ -342,7 +330,7 @@ a {
 /*=============== dropdown ================= */
 .sidebar li a .links_name,
 .links_dropdown_arrow {
-  color: #fff;
+  /* color: #fff; */
   font-size: 0.9rem;
   font-weight: 400;
   white-space: nowrap;
@@ -443,7 +431,7 @@ a {
   z-index: 2;
 }
 
-.sidebar.open~.home-section {
+.sidebar.open ~ .home-section {
   left: 250px;
   width: calc(100% - 250px);
 }
@@ -463,15 +451,15 @@ a {
 }
 
 .sidebar.open .active-route {
-  background: #ffffff1e !important;
+  background: rgba(255, 204, 0, 0.1) !important;
   padding-left: 0 !important;
+  color: #ffcc00 !important;
 }
 
 .active-route {
   background: none !important;
   border-radius: 10px;
   width: 99% !important;
-
 }
 
 .active-route:hover {
@@ -491,7 +479,7 @@ a {
   right: -52px;
   transform: translateY(-50%);
   z-index: 99;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   min-height: 70vh;
@@ -500,7 +488,6 @@ a {
 .right-sidebar:hover {
   right: 0;
 }
-
 
 /* mini sidebar */
 .right-sidebar.horizontal {
@@ -515,7 +502,7 @@ a {
 }
 
 .dark .right-sidebar.horizontal {
-  box-shadow: -2px -25px 22px 1px #171D32;
+  box-shadow: -2px -25px 22px 1px #171d32;
 }
 
 .right-sidebar.horizontal .logout {
@@ -563,7 +550,7 @@ a {
   margin: 0;
 }
 
-.action-icons li{
+.action-icons li {
   margin: 10px 0;
 }
 
@@ -574,17 +561,6 @@ a {
 span.burger-btn {
   display: none;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 @media (min-width: 1700px) and (max-width: 2000px) {
   .sidebar .logo-details .logo_name {
@@ -598,7 +574,6 @@ span.burger-btn {
   .sidebar .nav-list {
     padding-top: 75px;
   }
-
 
   .sidebar.open .multiple-item {
     padding-left: 20px;
