--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -231,3 +231,15 @@ input.form-file-input::file-selector-button {
   border-color: #ea5455!important;
 }
 
+
+.dark h1,
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6,
+.dark p,
+.dark span,
+.dark label {
+  @apply text-gray-200
+}
