--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -176,6 +176,27 @@ pre[class*="language-"] {
     white-space: normal;
 }
 
+.dark .dp__overlay_row {
+    background-color: #9e9e9e;
+}
+
+.dark .dp__menu_inner {
+    background-color: #9e9e9e;
+
+}
+
+.dark .vue3-easy-data-table__message div {
+    color: white !important
+}
+
+.dark .empty_table {
+    color: white !important
+}
+
+.dark .vue3-easy-data-table__header span {
+    color: white !important
+}
+
 .token.comment,
 .token.block-comment,
 .token.prolog,
@@ -342,6 +363,7 @@ pre[class*="language-"] {
 .dark .apexcharts-legend-text {
     color: white !important
 }
+
 .dark .apexcharts-datalabel-label {
     fill: white
 }
