--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -181,7 +181,24 @@ pre[class*="language-"] {
 }
 
 .dark .dp__menu_inner {
-    background-color: #9e9e9e;
+    --tw-bg-opacity: 1;
+    background-color: rgb(40 48 70 / var(--tw-bg-opacity));
+
+    .dp__btn {
+        color: white
+    }
+
+    .dp__calendar_header {
+        color: white
+    }
+
+    .dp__calendar_item {
+        color: gray
+    }
+
+    .dp__today {
+        color: gray !important
+    }
 
 }
 
