--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -177,7 +177,15 @@ pre[class*="language-"] {
 }
 
 .dark .dp__overlay_row {
-    background-color: #9e9e9e;
+    background-color: rgb(40 48 70 / var(--tw-bg-opacity));
+
+    .dp__time_col {
+        color: white
+    }
+
+    .dp__btn {
+        color: white !important;
+    }
 }
 
 .dark .dp__menu_inner {
@@ -384,9 +392,11 @@ pre[class*="language-"] {
 .dark .apexcharts-datalabel-label {
     fill: white
 }
-.dark .text-danger{
+
+.dark .text-danger {
     color: red
 }
+
 .dark .apexcharts-datalabel-value {
 
     fill: white
