--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -113,6 +113,10 @@ body {
     padding: 12px;
 }
 
+table tbody {
+    font-size: 13.72px
+}
+
 /* ======================== STYLES OF ACCORDION ======================== */
 
 /* ======================== STYLES OF PRISMJS ======================== */
